サイト作成

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                         </p>
                     </div>
                     <div class="mt-6 text-center">
-                        <i class="fas fa-futbol text-6xl text-blue-400"></i>
+                        <!-- 画像を表示するには、このHTMLファイルと同じフォルダに画像を置いてください -->
+                        <img src="B86F277D-31AD-405A-A6FA-530869F48D12_1_105_c.jpg" alt="サッカースタジアムの風景" class="rounded-xl shadow-md w-full h-auto object-cover mx-auto hover:scale-105 transition-transform duration-300">
                     </div>
                 </div>
 
